--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </div>
     <div class="middle-container">
       <div class="profile">
-        <img class = "myself" src="images/sharraf.png" alt="my photo-img">
+        <img class = "myself" src="images/Sharraf.HEIC" alt="my photo-img">
         <h2>Hello.</h2>
         <p>I am a web developer and student at Brac University. Football is my go-to sport and I like to lift heavy.</p>
       </div>
