--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </div>
     <div class="middle-container">
       <div class="profile">
-        <img class = "myself" src="images/Sharraf.HEIC" alt="my photo-img">
+        <img class = "myself" src="images/sharraf.png" alt="my photo-img">
         <h2>Hello.</h2>
         <p>I am a web developer and student at Brac University. Football is my go-to sport and I like to lift heavy.</p>
       </div>
@@ -49,7 +49,7 @@
       <a class="footer-link" href="https://www.facebook.com/mohammad.sharraf/">Facebook</a>
       <a class="footer-link" href="https://github.com/Mohammed21Sharraf">Github</a>
       <a class="footer-link" href="C:\Users\sharr\Documents\MERN STACK\CSS-My Site\index.html">Website</a>
-      <p class = "info">© 2021 Mohammed Sharraf.</p>
+      <p class = "info">© 2022 Mohammed Sharraf.</p>
     </div>
   </body>
 </html>
